# umsg

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  cobs.hpp  common.hpp  crc32.hpp  design.md  framer.hpp  library.properties  marshalling.hpp  node.hpp  router.hpp  umsg.h  umsg_common.hpp
.github/: copilot-instructions.md
docs/: architecture.md  changelog.md  usage.md
examples/: CMakeLists.txt
examples/ArduinoTcpNode/: ArduinoTcpNode.ino
examples/ArduinoUdpNode/: ArduinoUdpNode.ino
examples/BasicNode/: BasicNode.ino  SetLed.umsg  messages.umsg
examples/BasicNode/messages/: Heartbeat.hpp  SetLed.hpp
examples/Common/: Heartbeat.umsg  RobotState.umsg  SensorReading.umsg  SetLed.umsg  messages.umsg
examples/Common/messages/: Heartbeat.hpp  RobotState.hpp  SensorReading.hpp  SetLed.hpp
examples/PosixSerialLedController/: main.cpp
examples/PosixTcpSensor/: main.cpp
examples/PosixUdpLedController/: main.cpp
src/umsg/: cobs.hpp  common.hpp  crc32.hpp  dispatcher.hpp  framer.hpp  marshalling.hpp  node.hpp  protocol.hpp  router.hpp  umsg.h
src/umsg/transports/: arduino.hpp
src/umsg/transports/arduino/: stream.hpp  tcp_client.hpp  udp.hpp
src/umsg/transports/posix/: serial_port.hpp  tcp_client.hpp  udp_socket.hpp
tests/: CMakeLists.txt  README.md  run.sh  test_cobs.cpp  test_crc32.cpp  test_dispatcher.cpp  test_framer.cpp  test_harness.hpp  test_main.cpp  test_marshal.cpp  test_node.cpp  test_router.cpp
tools/umsg_gen/: README.md  umsg_gen.py
tools/umsg_gen/examples/: state.umsg
